lab1/Test/L1-A-12-75.output
Error Type A at Line 9
Error Type B at Line 14
Error Type A at Line 15
Error Type A at Line 22
Error Type A at Line 33
