lab1/Test/L1-A-12-75.cmm
int ;
int Y6h2k6x6TA84NVQ ( int sj , struct {
  float LM2xZ0FW_yHV4iern ;
}B4V6HMuwhvUz ) {
}
int tWkjVJtH4aFOu [ 1340906845 ] , r7dFBKwPZucFYInmS 

;
int &E438n6gOEPyGS6Gld0 ( ) {
  int u , jj8ho = blBV3J ;
  UlSj6oQPEYah9yk ;
  if ( DvA75dgZaoR ) {
    urjC17UFaj4 ;
  }else   if TTgH )   if ( U_PdLuaWI )   P6PKXv5bCkl66Iuxr 
    ';
else   while ( kNscsvYdGNUpr )   return dPrsOs5xNlweBx 
    || bW && MWU9_xCPjIdREjoFyQt != zNppAx4JEncp + aqrKKy7WiTC 
    * ! - ! z [ S0cvu5Q5fvu6gH3JSQH6 = HmpB8pV >= _wz 
    / ! T0K7hY4IEI0bb ( FIG6gZfducwCsOz9sfLw || Fd2bYXgphBGXc0 
    <= EqZcZvpvLr + ! ! ( qoyEsmFp7YNcgp1Pt && Cha94GZbJkAr 
    [ YIBAu && IWzkRxM > FpKV * - ug8p6ewxbL [ qwNbTa 
    = pFzWs3T3 && %A < whulU4 * - ( qvOw_ >= EyN2SrnMr_uYFa2c 
    ( LX , ilMD1ZFW ) ) ] * ! 1112076871 / 509872053.1472468916 
    ] . M6KB ) == CcryDk ( ) ) ] . usSKgIdgYX - uBORs9g7r4HKAL5TC 
    ;




}
int ;
struct m3PEuNEbvovFYiKAA ;
struct Wk :;
int ;
int bN3 ( ) {
  struct oY {
    struct CbRZKwJkGtrHIXu3 vJ9 ;
  }Sw3MjEiJL ;
}
